Refactoring poms.