@@ -1,154 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-	<artifactId>telsos-core</artifactId>
-	<version>1.0</version>
+  <groupId>kongra</groupId>
+  <artifactId>telsos-core</artifactId>
+  <version>1.0</version>
 
-	<groupId>kongra</groupId>
-	<name>telsos-core</name>
-	<url>http://www.example.com</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>19</maven.compiler.source>
+    <maven.compiler.target>19</maven.compiler.target>
+    <junit-jupiter.version>5.9.1</junit-jupiter.version>
+    <jmh.version>1.36</jmh.version>
+  </properties>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>19</maven.compiler.source>
-		<maven.compiler.target>19</maven.compiler.target>
-		<junit-jupiter.version>5.9.1</junit-jupiter.version>
-		<jmh.version>1.35</jmh.version>
-	</properties>
+  <dependencies>
 
-	<dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit-jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit-jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-params</artifactId>
-			<version>${junit-jupiter.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.23.1</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.assertj</groupId>
-			<artifactId>assertj-core</artifactId>
-			<version>3.23.1</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-core</artifactId>
+      <version>${jmh.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-core</artifactId>
-			<version>${jmh.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>${jmh.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-generator-annprocess</artifactId>
-			<version>${jmh.version}</version>
-			<scope>test</scope>
-		</dependency>
+    <dependency>
+      <groupId>commons-validator</groupId>
+      <artifactId>commons-validator</artifactId>
+      <version>1.7</version>
+    </dependency>
 
-		<dependency>
-			<groupId>commons-validator</groupId>
-			<artifactId>commons-validator</artifactId>
-			<version>1.7</version>
-		</dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.14.0-rc1</version>
+    </dependency>
 
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.14.0-rc1</version>
-		</dependency>
+    <dependency>
+      <groupId>org.eclipse.collections</groupId>
+      <artifactId>eclipse-collections-api</artifactId>
+      <version>11.1.0</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections-api</artifactId>
-			<version>11.1.0</version>
-		</dependency>
+    <dependency>
+      <groupId>org.eclipse.collections</groupId>
+      <artifactId>eclipse-collections</artifactId>
+      <version>11.1.0</version>
+    </dependency>
 
-		<dependency>
-			<groupId>org.eclipse.collections</groupId>
-			<artifactId>eclipse-collections</artifactId>
-			<version>11.1.0</version>
-		</dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
+    </dependency>
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
-			<scope>provided</scope>
-		</dependency>
+  </dependencies>
 
-	</dependencies>
+  <build>
+    <pluginManagement>
+      <plugins>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.1.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.0.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M5</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>3.0.0-M3</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>3.0.2</version>
-					<configuration>
-						<archive>
-							<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
-						</archive>
-					</configuration>
-				</plugin>
-				<plugin>
-					<artifactId>maven-install-plugin</artifactId>
-					<version>2.5.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.8.2</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>3.7.1</version>
-				</plugin>
-				<plugin>
-					<artifactId>maven-project-info-reports-plugin</artifactId>
-					<version>3.0.0</version>
-				</plugin>
-				<plugin>
-					<groupId>com.github.johnpoth</groupId>
-					<artifactId>jshell-maven-plugin</artifactId>
-					<version>1.3</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+	<plugin>
+	  <artifactId>maven-clean-plugin</artifactId>
+	  <version>3.1.0</version>
+	</plugin>
+
+	<plugin>
+	  <artifactId>maven-resources-plugin</artifactId>
+	  <version>3.0.2</version>
+	</plugin>
+
+        <plugin>
+	  <artifactId>maven-compiler-plugin</artifactId>
+	  <version>3.8.0</version>
+	  <configuration>
+	    <compilerArgs>
+	      <arg>-parameters</arg>
+	      <arg>--enable-preview</arg>
+	    </compilerArgs>
+	  </configuration>
+        </plugin>
+
+	<plugin>
+	  <artifactId>maven-surefire-plugin</artifactId>
+	  <version>3.0.0-M5</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+	</plugin>
+
+	<plugin>
+	  <artifactId>maven-failsafe-plugin</artifactId>
+	  <version>3.0.0-M3</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+	</plugin>
+
+	<plugin>
+	  <artifactId>maven-jar-plugin</artifactId>
+	  <version>3.0.2</version>
+	  <configuration>
+	    <archive>
+	      <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
+	    </archive>
+	  </configuration>
+	</plugin>
+
+	<plugin>
+	  <artifactId>maven-install-plugin</artifactId>
+	  <version>2.5.2</version>
+	</plugin>
+
+	<plugin>
+	  <artifactId>maven-deploy-plugin</artifactId>
+	  <version>2.8.2</version>
+	</plugin>
+
+	<plugin>
+	  <artifactId>maven-site-plugin</artifactId>
+	  <version>3.7.1</version>
+	</plugin>
+
+	<plugin>
+	  <artifactId>maven-project-info-reports-plugin</artifactId>
+	  <version>3.0.0</version>
+	</plugin>
+
+	<plugin>
+	  <groupId>com.github.johnpoth</groupId>
+	  <artifactId>jshell-maven-plugin</artifactId>
+	  <version>1.3</version>
+	</plugin>
+
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
